# v12

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PI_PLAN.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.cursor/rules/: cursor-cloud.mdc
.devcontainer/: devcontainer.json
.github/: VOUCHED.td  pull_request_template.md
.plans/: 18-server-auth-model.md  19-remote-endpoints-hosted-static.md  19-version-control-phase-1-vcs-driver-foundation.md  20-version-control-phase-2-source-control-provider-foundation.md  22-orchestration-v2-audit-remediation.md  effect-atom.md
apps/mobile/modules/v12-terminal/android/src/main/cpp/: CMakeLists.txt  v12_terminal_jni.cpp
apps/mobile/modules/v12code-terminal/android/src/main/cpp/: CMakeLists.txt  v12code_terminal_jni.cpp
docs/: README.md
oxlint-plugin-v12/: index.ts  package.json
oxlint-plugin-v12code/: index.ts  package.json
patches/: react-native-screens@4.25.2.patch
scripts/: build-desktop-artifact.test.ts  build-desktop-artifact.ts  dev-runner.test.ts  dev-runner.ts  merge-update-manifests.test.ts  mobile-native-static-check.test.ts  mobile-native-static-check.ts  mobile-showcase-environment.ts  mobile-showcase.config.ts  mobile-showcase.test.ts  mobile-showcase.ts  mock-update-server.ts  notify-discord-release.test.ts  notify-discord-release.ts  package.json  release-smoke.ts  resolve-nightly-release.test.ts  resolve-nightly-release.ts  sync-reference-repos.ts  update-release-package-versions.test.ts  update-release-package-versions.ts
(+1409 files in other folders)
